feat: Implementação completa de histórico em Projeto, Solicição e Admin